feat: implement reputation-loyalty separation, guest login bypass, draggable map pin coordinates, OpenCV media-guard Docker, and linter-test fixes